Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29642

qmake is crashing with "Qwt 6.1 rc3" and Qt 5

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.0 Beta1
    • 5.0.1, 5.1.1
    • Build tools: qmake
    • None
    • Windows 8 64-bit
      Qt 5.1.1 binary distribution an MingW 4.8 tool chain
    • 50a90720be7d67dcdfe704a82fb3b1138edd2aab

      ASSERT: "fileName.isEmpty() || isAbsolutePath(fileName)" in file Q:\qt5_workdir\

      Struck this issue with the newly released Qt 5.1.1, MingW 4.8 (32-bit) on Windows 8 64-bit. Although I was also using Qwt6.1 the problem is related to setting QMAKEFEATURES as a persistent property.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            buddenha Oswald Buddenhagen
            rawfool Rahul
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes